# eigen-os

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  conftest.py  eigenos_full_system_test_checklist.sh
src/rust/: Cargo.toml
src/rust/apps/cli/: Cargo.toml  README.md  build.rs
src/rust/apps/cli/src/: jobspec.rs  main.rs
src/rust/apps/cli/tests/fixtures/: jobspec-valid-full.yaml  jobspec-valid-minimal.yaml  jobspec-valid-unknown-keys.yaml  plugin_compatibility_matrix_v1.json
src/rust/crates/eigen-kernel/: Cargo.toml  build.rs
src/rust/crates/eigen-kernel/src/: durable_job_store.rs  job_store.rs  lib.rs  main.rs  rpc.rs
src/rust/crates/eigen-kernel/tests/: durable_store_replay_tests.rs
src/rust/crates/observability/: Cargo.toml
src/rust/crates/observability/src/: lib.rs
src/rust/crates/qfs/: Cargo.toml  README.md
src/rust/crates/qfs/src/: lib.rs  local_circuit_fs.rs  qfs_l2_checkpoint.rs
src/rust/crates/qfs/tests/: checkpoint_contract_compatibility.rs
src/rust/crates/qrtx/: Cargo.toml  README.md
src/rust/crates/qrtx/src/: event_log.rs  lib.rs  state_machine.rs
src/rust/crates/resource-manager/: Cargo.toml
src/rust/crates/resource-manager/src/: lib.rs
src/rust/crates/resource-manager/tests/: cluster_control_plane_integration.rs  deterministic_replay_gate.rs  explain_backend_selection_contract.rs  multi_device_contract_integration.rs  queue_adapter_contract.rs  scheduler_contract_compatibility.rs  worker_node_service_contract.rs
src/rust/crates/resource-manager/tests/fixtures/: device_score_fixtures.csv
src/rust/crates/security-module/: Cargo.toml
src/rust/crates/security-module/src/: lib.rs
src/services/benchmark-service/: README.md  pyproject.toml
src/services/benchmark-service/src/benchmark_service/: __init__.py  compare_api.py  dataset_ingestion.py  history_api.py  optimizer_evaluation.py  reproducibility.py  run_api.py  run_lifecycle.py
src/services/benchmark-service/tests/: conftest.py  test_compare_api_contract.py  test_dataset_ingestion.py  test_history_api.py  test_optimizer_evaluation_harness.py  test_reproducibility_gate.py  test_run_api_contract.py  test_run_lifecycle.py
src/services/benchmark-service/tests/fixtures/optimizer_evaluation/: offline_online_fixture.json
src/services/driver-manager/: README.md  pyproject.toml
src/services/driver-manager/src/driver_manager/: __init__.py  aws_braket_driver.py  base_driver.py  errors.py  grpc_impl.py  grpc_server.py  main.py  parity.py  proto_gen.py  qiskit_runtime_driver.py  registry.py  rollback_governance.py  secret_lifecycle.py  simulator_driver.py  stub_driver.py
src/services/driver-manager/src/eigen_internal/v1/: driver_manager_service_pb2.py  driver_manager_service_pb2_grpc.py  types_pb2.py  types_pb2_grpc.py
src/services/driver-manager/tests/: conftest.py  test_aws_braket_driver.py  test_device_profile_registry.py  test_grpc_skeleton.py  test_official_driver_matrix_fixture.py  test_parity_policy_fixture.py  test_parity_tolerance_suite.py  test_qdriver_v1_conformance.py  test_qiskit_runtime_driver.py  test_registry.py  test_rollback_governance.py  test_secret_lifecycle.py  test_simulator_driver.py
src/services/eigen-compiler/: README.md  pyproject.toml
src/services/eigen-compiler/src/eigen_compiler/: __init__.py  advisor_boundary.py  compiler.py  errors.py  grpc_impl.py  grpc_server.py  main.py  proto_gen.py  symbolic_rewrite.py  validation.py
src/services/eigen-compiler/src/eigen_lang/: __init__.py  optimizers.py
src/services/eigen-compiler/src/grpc_status/: __init__.py  rpc_status.py
src/services/eigen-compiler/tests/: conftest.py  test_advisor_boundary.py  test_compilation_rpc.py  test_compiler_ast.py  test_conformance_suite.py  test_eigen_lang_package.py  test_handoff_contract.py  test_symbolic_rewrite_pipeline.py
src/services/eigen-compiler/tests/golden/minimal_circuit/: expected.aqo.json  program.eigen.py
src/services/eigen-compiler/tests/golden/parameterized_vqe/: expected.aqo.json  (+1 more)
src/services/neuro-symbolic-service/: README.md  pyproject.toml
src/services/neuro-symbolic-service/src/eigen/: __init__.py
src/services/neuro-symbolic-service/src/neuro_symbolic_service/: advisor_boundary.py  errors.py  grpc_impl.py  grpc_server.py  knowledge_base.py  knowledge_base_versioned.py  main.py  observability.py  pattern_miner.py  production_trace_training.py
src/services/neuro-symbolic-service/tests/: conftest.py  test_advisory_boundary.py  test_grpc_service.py  test_knowledge_base_service.py  test_knowledge_base_versioning.py  test_learning_control_plane_contract_fixture.py  test_pattern_miner_service.py
src/services/system-api/: README.md  pyproject.toml  requirements.txt
src/services/system-api/src/system_api/: __init__.py  errors.py  grpc_delegation.py  grpc_impl.py  grpc_server.py  job_event_store.py  job_events.py  job_store.py  jobspec_parser.py  kernel_client.py  knowledge_base.py  knowledge_base_versioned.py  lifecycle.py  lqm.py  main.py  observability.py  pattern_miner.py  proto_gen.py  qfs_store.py  scheduling.py  security.py  validation.py
src/services/system-api/tests/: conftest.py  grpc_status.py  test_batch_execution_optimizer.py  test_compiled_aqo_artifact.py  test_e2e_real_backend_execution.py  test_e2e_smoke_submit_watch_results.py  test_e2e_vqe_contract_stability.py  test_explain_execution_contract.py  test_idempotency.py  test_jobspec_parser.py  test_kernel_client_distributed_topology.py  test_kernel_delegation.py  test_knowledge_base_contract_fixture.py  test_knowledge_base_service.py  test_knowledge_base_versioning.py  test_learning_control_plane_contract_fixture.py  test_lqm_atomic_offline_failover.py  test_observability_smoke.py  test_optimizer_contract_fixture.py  test_pattern_miner_service.py  test_public_envelope_versioning.py  test_public_error_conformance.py  test_qfs_blob_backends.py  test_qrtx_dag_and_lifecycle.py  test_rest_parity_and_compatibility_matrix.py  test_security_baseline.py  test_stream_job_updates.py  test_validation_errors.py
(+649 files in other folders)
