[workspace]
resolver = "2"
members = [
  "crates/eigen-kernel",
  "crates/observability",
  "crates/qrtx",
  "crates/qfs",
  "crates/resource-manager",
  "crates/security-module",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.1.0"

[workspace.lints.rust]
unsafe_code = "forbid"
