[workspace]
resolver = "2"
members = [
  "apps/cli",
  "crates/observability",
  "crates/qrtx",
  "crates/qfs",
  "crates/resource-manager",
  "crates/security-module",
  "crates/eigen-kernel",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
version = "0.10.0"

[workspace.lints.rust]
unsafe_code = "forbid"
