[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "driver-manager"
version = "0.8.0"
description = "Eigen OS driver-manager service (MVP skeleton)."
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.80",
  "grpcio-tools>=1.80",
  "grpcio-status>=1.80",
  "googleapis-common-protos>=1.74",
  "protobuf>=6.31.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
]

[project.scripts]
driver-manager = "driver_manager.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
