[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-symbolic-service"
version = "0.1.0"
description = "Eigen OS internal Neuro-DPDA service boundary."
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.80",
  "protobuf>=6.31.1,<7.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
]

[project.scripts]
neuro-symbolic-service = "neuro_symbolic_service.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
