[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-api"
version = "0.9.0"
description = "Eigen OS system-api (MVP gRPC skeleton)."
requires-python = ">=3.12"
dependencies = [
  "grpcio>=1.76",
  "grpcio-tools>=1.76",
  "grpcio-status>=1.76",
  "googleapis-common-protos>=1.72",
  "protobuf>=6.33",
  "PyYAML>=6.0",
  "boto3>=1.34",
  "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9",
  "pytest-asyncio>=0.24",
  "pytest-anyio>=0.0.0",
]

[project.scripts]
system-api = "system_api.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
