[package]
name = "cli"
edition.workspace = true
version.workspace = true
license.workspace = true
build = "build.rs"

[[bin]]
name = "eigen"
path = "src/main.rs"

[dependencies]
prost = "0.14.3"
prost-types = "0.14.3"
serde_yaml = "0.9"
sha2 = "0.10"
tokio = { version = "1.49.9", features = ["rt-multi-thread", "time"] }
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.5"
tokio-stream = { version = "0.1.18", features = ["net"] }

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"
