[package]
name = "eigen-kernel"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "eigen-kernel"
path = "src/main.rs"

[dependencies]
observability = { path = "../observability" }
qrtx = { path = "../qrtx" }
qfs = { path = "../qfs" }
resource-manager = { path = "../resource-manager" }
security-module = { path = "../security-module" }

tokio = { version = "1.49.9", features = ["macros", "rt-multi-thread", "time", "signal"] }
tokio-stream = "0.1"
tonic = { version = "0.14.2", features = ["transport"] }
tonic-prost = "0.14.5"
prost = "0.14.3"
prost-types = "0.14.3"

uuid = { version = "1.19.0", features = ["v4"] }
parking_lot = "0.12.5"
serde = { version = "1", features = ["derive"] }

tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
sha2 = "0.10"

[build-dependencies]
tonic-prost-build = "0.14.5"
protoc-bin-vendored = "3.2.0"

[dev-dependencies]
tempfile = "3.22.0"