[package]
name = "qfs"
edition.workspace = true
version.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3.8"
thiserror = "2.0.18"
arrow-array = "53"
arrow-schema = "53"
parquet = { version = "53", default-features = false, features = ["arrow"] }
aws-config = "1"
aws-sdk-s3 = "1"
tokio = { version = "1.49.9", features = ["rt-multi-thread"] }
